Fixed redundant description, also fixed warning banner overflow.

--- a/src/js/apps/Portfolio/Portfolio.scss
+++ b/src/js/apps/Portfolio/Portfolio.scss
@@ -22,6 +22,7 @@ body {
     font-weight: bold;
     width: 100%;
     padding: 10px;
+    box-sizing: border-box;
     
 
     p {
